# qucs

./: .gitignore
qucs/: configure.ac
qucs/qucs/: main.cpp  main.h  module.cpp  mouseactions.cpp  qucs.qrc  schematic_file.cpp
qucs/qucs/components/: component.cpp
qucs/qucs/diagrams/: diagramdialog.cpp
qucs/qucs/dialogs/: qucssettingsdialog.cpp
qucs/qucs/extsimkernels/: CMakeLists.txt  Makefile.am  abstractspicekernel.cpp  abstractspicekernel.h  customsimdialog.cpp  customsimdialog.h  externsimdialog.cpp  externsimdialog.h  jspice.cpp  jspice.h  simsettingsdialog.cpp  simsettingsdialog.h  spicecompat.cpp  spicecompat.h
qucs/qucs/octave/: CMakeLists.txt  Makefile.am  createPulseNDataSet.m  loadQucsDataSet.m  loadQucsNDataSet.m  parseQucsNDataSet.m  plotCartesian2D2V.m  plotCartesianN2D2V.m  showQucsDataSet.m
qucs/qucs/spicecomponents/: CMakeLists.txt  MEMRISTOR_SPICE.cpp  MEMRISTOR_SPICE.h  Makefile.am  incl_script.cpp  jspice_script.cpp  jspice_script.h  spicecomponents.h
